[metadata]
name = openstack-deploy-ops-guide
summary = OpenStack Deployment and Operations Guide
description-file =
    README.md
author = Pure Storage Inc.
author-email = simon@purestorage.com
home-page = https://purestorage.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack-deploy-ops-guide
[build_sphinx]
all_files = 1
build-dir = build
source-dir = source
builders = html
warning-is-error = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
